data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_740.wast
;; 1. **Test Description**: Create a loop that uses a `br_if` branch with a condition that should evaluate to `false`. Verify if the branch is correctly not taken.    - **Constraint**: Ensure the `br_if` condition evaluation is correctly performed to skip the branch when the condition is `false`.    - **Incorrect Condition Evaluation**: This test checks whether the `br_if` instruction incorrectly takes the branch even when the condition is evaluated as `false`.

(assert_invalid
  (module
    (func $test_br_if_loop
      (block 
        (loop (result i32)
          (i32.const 0) 
          (br_if 0 (i32.const 0)) 
          (i32.const 42)
        ) 
        (drop)
      )
    )
  )
  "type mismatch"
)